--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,6 +1,6 @@
 // Customize theme
 $primary: rgb(84, 178, 224);
 $success: rgb(45, 145, 142);
-$warning: rgb(255, 191, 99);
+$warning: #ffdd00;
 $danger: rgb(255, 82, 75);
 $secondary: #A5A9AD;
