--- a/src/global.scss
+++ b/src/global.scss
@@ -4,9 +4,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
-  --color-facebook: #2f477a;
-  --color-instagram: #C33484;
-  --color-gmail: #a22b1c;
+  --color-facebook: #2874fc;
+  --color-instagram: #ee2c82;
+  --color-gmail: #cf2e2e;
 }
 
 html, body {
