✨ Add fancy header

--- a/src/global.scss
+++ b/src/global.scss
@@ -7,6 +7,10 @@
   --color-facebook: #2874fc;
   --color-instagram: #ee2c82;
   --color-gmail: #cf2e2e;
+  --color-flag-de-red: #DE0100;
+  --color-flag-de-gold: #FFD000;
+  --color-flag-fr-blue: #002153;
+  --color-flag-fr-red: #CF0821;
 }
 
 html, body {
