--- a/src/global.scss
+++ b/src/global.scss
@@ -17,6 +17,7 @@ html, body {
   font-family: 'Montserrat', sans-serif;
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 .w-fit-content {
